--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 	position:relative;
 	top:50px;
 	border-radius: 0px 0px 20px 20px;
-	background: -webkit-radial-gradient(circle, yellow 1%, transparent 99%)
+	background: -webkit-radial-gradient(circle, blue 1%, transparent 99%)
 }
 
 .title {
